--- a/src/gui/resource.qrc
+++ b/src/gui/resource.qrc
@@ -53,5 +53,7 @@
         <file>icons/money_fist3_small.png</file>
         <file>icons/money_fist4_small.png</file>
         <file>icons/fistful_of_cash_72.png</file>
+        <file>icons/DeleteRed.png</file>
+        <file>icons/reply.png</file>
     </qresource>
 </RCC>
