--- a/src/gui/ui/dlgmarkets.ui
+++ b/src/gui/ui/dlgmarkets.ui
@@ -6,19 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>528</width>
-    <height>285</height>
+    <width>864</width>
+    <height>669</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Bid/Ask Markets</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,9">
    <item>
-    <widget class="QGroupBox" name="groupBox">
-     <property name="title">
-      <string/>
-     </property>
+    <widget class="QWidget" name="userBar" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
@@ -55,14 +52,28 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>49</width>
+          <width>392</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
-       <widget class="QToolButton" name="toolButton">
+       <widget class="QToolButton" name="toolButtonTradeArchive">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="toolButtonRefreshAccounts">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="toolButtonRefreshOffers">
         <property name="text">
          <string/>
         </property>
