--- a/src/gui/widgets/agreementdetails.ui
+++ b/src/gui/widgets/agreementdetails.ui
@@ -23,7 +23,7 @@
       <attribute name="title">
        <string>General</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_17">
+      <layout class="QVBoxLayout" name="verticalLayout_10">
        <item>
         <widget class="Line" name="line">
          <property name="orientation">
@@ -248,18 +248,35 @@
          </layout>
         </widget>
        </item>
-       <item alignment="Qt::AlignRight">
-        <widget class="QPushButton" name="pushButtonRunContract">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>Run smart contract...</string>
-         </property>
-        </widget>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_16">
+         <item>
+          <spacer name="horizontalSpacer_5">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>418</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButtonRunContract">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Run smart contract...</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item>
         <spacer name="verticalSpacer">
@@ -268,19 +285,13 @@
          </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>20</width>
-           <height>167</height>
+           <width>607</width>
+           <height>140</height>
           </size>
          </property>
         </spacer>
        </item>
       </layout>
-      <zorder>line</zorder>
-      <zorder>groupBoxSpecifications</zorder>
-      <zorder>groupBoxValidFrom</zorder>
-      <zorder>groupBoxValidTo</zorder>
-      <zorder>pushButtonRunContract</zorder>
-      <zorder>verticalSpacer</zorder>
      </widget>
      <widget class="QWidget" name="tabBylaws">
       <attribute name="title">
@@ -1446,7 +1457,7 @@
  </resources>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroupValidTo"/>
   <buttongroup name="buttonGroupValidFrom"/>
+  <buttongroup name="buttonGroupValidTo"/>
  </buttongroups>
 </ui>
