--- a/src/gui/widgets/home.ui
+++ b/src/gui/widgets/home.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Transaction History</string>
+   <string>Pending Transactions</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
