--- a/src/gui/widgets/nymdetails.ui
+++ b/src/gui/widgets/nymdetails.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>336</width>
+    <width>478</width>
     <height>346</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,1,1,10">
    <item>
     <widget class="Line" name="line">
      <property name="orientation">
@@ -62,30 +62,36 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Registered on notaries:</string>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Payment address:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="lineEditDescription">
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="toolButtonDescription">
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../resource.qrc">
+         <normaloff>:/icons/icons/Basic-Copy-icon.png</normaloff>:/icons/icons/Basic-Copy-icon.png</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
-    <widget class="QTableWidget" name="tableWidget">
-     <column>
-      <property name="text">
-       <string>Notary</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Status</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Notary ID</string>
-      </property>
-     </column>
-    </widget>
+    <widget class="QrWidget" name="widgetQrCode" native="true"/>
    </item>
   </layout>
  </widget>
@@ -96,7 +102,15 @@
    <header>gui/widgets/editdetails.hpp</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>QrWidget</class>
+   <extends>QWidget</extends>
+   <header>gui/widgets/qrwidget.hpp</header>
+   <container>1</container>
+  </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
