--- a/src/gui/widgets/settings.ui
+++ b/src/gui/widgets/settings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>418</width>
-    <height>216</height>
+    <width>534</width>
+    <height>366</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,6 +16,9 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTabWidget" name="tabWidget">
+     <property name="currentIndex">
+      <number>0</number>
+     </property>
      <widget class="QWidget" name="tabUI">
       <attribute name="title">
        <string>User Interface</string>
@@ -23,8 +26,8 @@
       <widget class="QLabel" name="labelLanguage">
        <property name="geometry">
         <rect>
-         <x>20</x>
-         <y>20</y>
+         <x>28</x>
+         <y>112</y>
          <width>65</width>
          <height>20</height>
         </rect>
@@ -36,8 +39,8 @@
       <widget class="QComboBox" name="comboBoxLanguage">
        <property name="geometry">
         <rect>
-         <x>122</x>
-         <y>18</y>
+         <x>130</x>
+         <y>110</y>
          <width>150</width>
          <height>26</height>
         </rect>
@@ -53,13 +56,26 @@
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>70</y>
+         <y>62</y>
          <width>151</width>
          <height>20</height>
         </rect>
        </property>
        <property name="text">
         <string>Expert Mode</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="checkBoxHideNav">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>20</y>
+         <width>221</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Hide Main Navigation Window</string>
        </property>
       </widget>
      </widget>
