--- a/src/gui/widgets/pageasset_type.ui
+++ b/src/gui/widgets/pageasset_type.ui
@@ -27,7 +27,7 @@
    <item>
     <widget class="QRadioButton" name="radioButtonSecurity">
      <property name="enabled">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <property name="text">
       <string>Security</string>
